[metadata]
name = bitex-blockchain-explorer
version = 0.1.0
author = Nika Kudukhashvili
author_email = nikakuduxashvili0@gmail.com
description = A Python module for interacting with blockchain data using the Bitex blockchain explorer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kuduxaaa/bitex

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    mypy
